# mnemonic

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml
.claude/: adr.local.md  documentation-review.local.md  github-social.local.md  sigint.local.md  test-state.json
.claude-plugin/: plugin.json
.github/: ISSUE_4_TASKS.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
agents/: compression-worker.md  memory-curator.md  mnemonic-search-subcall.md  ontology-discovery.md
commands/: capture.md  custodian.md  discover.md  gc.md  init.md  integrate.md  list.md  query.md  recall.md  search-enhanced.md  search.md  setup.md  status.md  team-audit.md  validate.md
docs/: agent-coordination.md  api-reference.md  architecture.md  cli-usage.md  contributing.md  library-reference.md  ontologies.md  ontology-implementation-plan.md  semantic-search.md  troubleshooting.md  validation.md
hooks/: hooks.json  post_tool_use.py  pre_tool_use.py  session_start.py  stop.py  user_prompt_submit.py
lib/: README.md  __init__.py  config.py  memory_reader.py  migrate_filenames.py  ontology.py  ontology_validator.py  paths.py  relationships.py  search.py
ontologies/: README.md
reports/: README.md
scripts/: cleanup_memory_paths.py  fix_malformed_memories.py  migrate_namespaces.py  migrate_scope_paths.py  migrate_to_v2_paths.py  populate_fallback.py
templates/: AGENTS.md  CONVENTIONS.md  copilot-instructions.md  cursor-rule.mdc  mnemonic-protocol.md
tests/: __init__.py  conftest.py  test_frontmatter_updater.py  test_integration_e2e.py  test_integrator.py  test_marker_parser.py  test_template_validator.py  test_validator.py
tools/: mnemonic-paths  mnemonic-query  qmd-setup.sh  (+1 more)
(+182 files in other folders)
